# jabali-security

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude-flow/data/: auto-memory-store.json  graph-state.json  intelligence-snapshot.json  pending-insights.jsonl  ranked-context.json
.claude-flow/sessions/: current.json  session-1774737828158.json
api/: app.py  middleware.py  routes.py
api/routes/: __init__.py  attack_mode.py  blocking.py  bruteforce.py  cleanup.py  config.py  core.py  crowdsec.py  helpers.py  incidents.py  proactive.py  quarantine.py  rules.py  scanning.py  sshjail.py  threat_intel.py  ufw.py  users.py  waf.py  webshield.py
daemon/: __main__.py  server.py
debian/: control  postinst  postrm  prerm
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  NSPAWN-MIGRATION.md  NSPAWN-PANEL-RESPONSE.md  PARITY.md  TRANSLATIONS.md
docs/adr/: 0001-yara-x-primary-scanner.md  0002-ip-reputation-bisect.md  0003-unix-socket-api.md  0004-crowdsec-signal-source.md  0005-privilege-separation.md  README.md  template.md  (+1 more)
etc/: jabali-security-web.service  jabali-security.conf.example  jabali-security.service
issues/: 001-extract-component-registry.md
lib/: behavior_tracker.py  config.py  constants.py  filter.py  hash_cache.py  incidents.py  log_tailer.py  models.py  notify.py  privilege.py  process_monitor.py  quarantine.py  queue.py  rapidscan.py  registry.py  response.py  safe_io.py  scoring.py  system_tools.py  tenant.py
panel/: JabaliSecurityClient.php  JabaliSecurityPlugin.php
plans/: crowdsec-integration.md  geoip-blocking.md  panel-parity.md  shared-challenge-system.md  unix-socket-migration.md
rules/: backdoors.yar  miners.yar  uploaders.yar  webshells.yar
scripts/: build-deb.sh
tests/: conftest.py  test_behavior.py  test_bug_fixes.py  test_cms_detection.py  test_config.py  test_crowdsec.py  test_crowdsec_enrichment.py  test_detector.py  test_entropy.py  test_filter.py  test_full_attack.sh  test_geoip.py  test_hash_cache.py  test_heuristic.py  test_incidents.py  test_injection_cleaner.py  test_ip_reputation.py  test_log_patterns.py  test_models.py  test_orchestrator.py  test_privilege.py  test_quarantine.py  test_response.py  test_scoring.py  test_security.sh  test_tenant.py  test_ufw_manager.py  test_webshield_config.py  test_webshield_security.py  test_zap_scan.sh
web/: api_client.py  app.py  routes.py
(+104 files in other folders)
