[project]
name = "jabali-security"
version = "0.1.0"
description = "Event-driven security suite for Linux shared hosting"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "yara-x>=0.11",
    "click>=8.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
jabali-security = "daemon.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon", "lib", "api"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
