[project]
name = "jabali-security"
version = "0.1.0"
description = "Event-driven security suite for Linux shared hosting"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "yara-x>=0.11",
    "click>=8.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.20",
    "maxminddb>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
jabali-security = "daemon.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon", "lib", "api"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# S101 — asserts are expected in tests.
# S108 — hardcoded /tmp paths are fine in tests (pytest tmp_path etc.).
"tests/**" = ["S101", "S108"]
# daemon/__main__.py invokes iptables/ip6tables/nft/geoipupdate with
# partial paths on purpose: the daemon runs as root and relies on the
# systemd-managed PATH (/usr/sbin:/sbin:/usr/bin:/bin), and these tools
# are packaged in different absolute locations across Debian/Ubuntu/RHEL
# generations. Hardcoding a path would break portability without adding
# real security since root → arbitrary PATH anyway.
"daemon/__main__.py" = ["S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "vulture>=2.16",
]
